fixed visible outline of .header__nav-button

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -122,7 +122,9 @@ a
 	background-color: transparent 
 	display: none
 	position: relative
-
+	&:focus
+		outline: none 
+		
 .span__plus_horizontal
 	position: absolute
 	height: 2px
